--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Geoconsultores E.U.</title>
+	<title>Geoconsultores E.U. - Geomarketing e inteligencia de negocios</title>
 	<meta charset="iso-8559-1"/>
 	<meta charset="utf-8"/>
 	<meta name="description" content="Página web de geomarketing"/>
